syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.temp.component.grpc";
option java_outer_classname = "TEST";
option objc_class_prefix = "TX";

package grpc;

// The greeting service definition.
service GrpcServer {
  // Sends a greeting
  rpc SayHello (GrpcRequest) returns (GrpcResponse) {}
}

// The request message containing the user's name.
message GrpcRequest {
  string name = 1;
}

// The response message containing the greetings
message GrpcResponse {
  string message = 1;
}